--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <p>This is change</p>
     <!-- javascript link start -->
     <script src="js/custom.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
