education part start
education part start

--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
         </div>
     </section>
     <!-- About part css end -->
+
+    <!-- Education part html start -->
+    <div class="education-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 fw-bolder text-center p-5">
+            <h4>Education</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Education part html end -->
     <!-- javascript link start -->
     <script src="js/custom.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
