--- a/index.html
+++ b/index.html
@@ -56,6 +56,30 @@
         </div>
       </nav>
     <!-- navigation html end -->
+
+    <!-- About part html start -->
+    <section class="about-container">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-md-9">
+                    <h3>OMAR BIN FARUK</h3>
+
+                    <p>Web Developer | Network Engineer</p>
+
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate iste iure qui dolorem doloremque ab harum perspiciatis facere. Aut commodi repellendus libero vel consequatur dolorum iure repudiandae earum sint nobis.</p>
+
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium aliquam adipisci expedita itaque unde inventore odio voluptas magni. Minima facilis minus vel iste eaque, quas atque fugiat quibusdam nulla architecto consequatur commodi sit, dicta officiis repudiandae voluptatibus nam, repellendus necessitatibus!</p>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam voluptate blanditiis libero nihil cupiditate. Distinctio amet optio aliquid aspernatur perferendis, tempora architecto voluptate eaque quidem assumenda obcaecati dolorem impedit quo nobis fuga sed deleniti fugiat. Similique, recusandae veritatis minima maxime iste mollitia perspiciatis laudantium deleniti ratione iure distinctio in rem voluptate repellendus, aliquid reiciendis voluptas saepe ab dolor commodi totam.</p>
+                </div>
+
+                <div class="col-md-3">
+                    <img src="images/about-img.jpg" alt="OAMR" class="img-fluid border border-light rounded-circle mt-4">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- About part css end -->
     <!-- javascript link start -->
     <script src="js/custom.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
