--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- banner part html start -->
+    <section class="container-fluid banner-container">
+        <div class="row vh-100">
+            <div class="col-md-9 banner-colum m-auto text-center text-white display-4 p-4 border border-light">
+                <h1 class="fw-bold">OMAR BIN FARUK</h1>
+                <h4 class="text-decoration-underline">Web Developer and Network Engineer</h4>
+            </div>
+        </div>
+    </section>
+    <!-- banner part html end -->
     <!-- javascript link start -->
     <script src="js/custom.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
