--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="row vh-100">
             <div class="col-md-9 banner-colum m-auto text-center text-white display-4 p-4 border border-light">
                 <h1 class="fw-bold">OMAR BIN FARUK</h1>
-                <h4 class="text-decoration-underline">Web Developer and Network Engineer</h4>
+                <h4 class="text-decoration-underline">Web Developer & Network Engineer</h4>
             </div>
         </div>
     </section>
