Project part complete
Project part complete

--- a/index.html
+++ b/index.html
@@ -137,6 +137,55 @@
     </div>
   </div>
   <!-- Education part html end -->
+
+  <!-- project part html start -->
+  <div class="project-container">
+    <div class="container">
+      <div class="row">
+          <div class="col fw-bolder text-center p-5 text-light">
+            <h2>Projects</h2>
+          </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="project-img">
+            <img src="images/pic1.jpg" class="img-fluid w-100" alt="">
+          </div>
+          <div class="project-con">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, provident consectetur. <br> <span>10:25am</span></p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="project-img">
+            <img src="images/pic2.jpg" class="img-fluid w-100" alt="">
+          </div>
+          <div class="project-con">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, provident consectetur. <br> <span>10:25am</span></p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="project-img">
+            <img src="images/pic3.jpg" class="img-fluid w-100" alt="">
+          </div>
+          <div class="project-con">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, provident consectetur. <br> <span>10:25am</span></p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="project-img">
+            <img src="images/pic4.jpg" class="img-fluid w-100" alt="">
+          </div>
+          <div class="project-con">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, provident consectetur. <br> <span>10:25am</span></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- project part html end -->
   <!-- javascript link start -->
   <script src="js/custom.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
