--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <!-- Education part html end -->
 
   <!-- project part html start -->
-  <div class="project-container">
+  <div class="project-container" id="Project">
     <div class="container">
       <div class="row">
           <div class="col fw-bolder text-center p-5 text-light">
