--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- navigation html end -->
 
     <!-- About part html start -->
-    <section class="about-container">
+    <section class="about-container" id="About">
         <div class="container">
             <div class="row py-5">
                 <div class="col-md-9">
