Contact part complete
Contact part complete

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut,
                 provident consectetur. <br />
-                <span>10:25am</span>
+                <h4>10:25am</h4>
               </p>
             </div>
           </div>
@@ -224,7 +224,7 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut,
                 provident consectetur. <br />
-                <span>10:25am</span>
+                <h4>10:25am</h4>
               </p>
             </div>
           </div>
@@ -237,7 +237,7 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut,
                 provident consectetur. <br />
-                <span>10:25am</span>
+                <h4>10:25am</h4>
               </p>
             </div>
           </div>
@@ -250,7 +250,7 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut,
                 provident consectetur. <br />
-                <span>10:25am</span>
+                <h4>10:25am</h4>
               </p>
             </div>
           </div>
@@ -260,7 +260,7 @@
     <!-- project part html end -->
 
     <!-- portfolio part html start -->
-    <div class="portfolio-container">
+    <div class="portfolio-container" id="Portfolio">
       <div class="container">
         <div class="row py-5">
           <div class="col-md-12 text-center edu-con">
@@ -310,6 +310,76 @@
     </div>
 
     <!-- portfolio part html end -->
+
+    <!-- conatct form part html start -->
+    <div class="form-container" id="Contact">
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-md-12 text-white m-auto text-center">
+            <h2 class="fw-bold">It was a bummpy ride</h2>
+            <p>But dreams have e tendancy to play hard to get ride</p>
+          </div>
+        </div>
+        <div class="row py-4">
+          <div class="col-sm me-3 border border-light text-light text-center">
+            <span>29</span>
+            <p>Failed Attempts</p>
+          </div>
+
+          <div class="col-sm me-3 border border-light text-light text-center">
+            <span>29</span>
+            <p>Failed Attempts</p>
+          </div>
+
+          <div class="col-sm me-3 border border-light text-light text-center">
+            <span>29</span>
+            <p>Failed Attempts</p>
+          </div>
+
+          <div class="col-sm me-3 border border-light text-light text-center">
+            <span>29</span>
+            <h4>Failed Attempts</h4>
+          </div>
+        </div>
+
+        <div class="row py-5">
+          <div class="col-md-12 text-white m-auto text-center">
+            <h2 class="fw-bold">Get In Touch</h2>
+            <p>I can totally stalked online. Give me shout-out</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col text-light pb-2">
+            <h4>
+              Shoot a Message!
+            </h4>
+          </div>
+        </div>
+
+        <div class="row py-3">
+          <div class="col">
+            <input type="text" class="form-control inner-form" placeholder="Your name" aria-label="First name">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control inner-form" placeholder="Your Email" aria-label="Last name">
+          </div>
+        </div>
+
+          <div class="row pb-3">
+            <div class="mb-3">
+              <textarea class="form-control inner-form" id="exampleFormControlTextarea1" rows="5" placeholder="Your Message"></textarea>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12">
+              <button type="button" class="btn button-color">Send Message</button>
+            </div>
+          </div>
+      </div>
+    </div>
+    <!-- contact form part html end -->
     <!-- javascript link start -->
     <script src="js/custom.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
