Portfolio section complete
Portfolio section complete

--- a/index.html
+++ b/index.html
@@ -1,195 +1,318 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="images/shortcut_icon.jpg"
+    />
+    <title>Omar Bin Faruk Portfolio Website</title>
+    <link rel="stylesheet" href="css/all.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/png" href="images/shortcut_icon.jpg">
-  <title>Omar Bin Faruk Portfolio Website</title>
-  <link rel="stylesheet" href="css/all.css">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-  <!-- banner part html start -->
-  <section class="container-fluid banner-container">
-    <div class="row vh-100">
-      <div class="col-md-9 banner-colum m-auto text-center text-white display-4 p-4 border border-light">
-        <h1 class="fw-bold">OMAR BIN FARUK</h1>
-        <h4 class="text-decoration-underline">Web Developer & Network Engineer</h4>
-      </div>
-    </div>
-  </section>
-  <!-- banner part html end -->
-  <!-- navigation part html start -->
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-container">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#About">ABOUT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Education">EDUCATION</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Project">PROJECT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Portfolio">PORTFOLIO</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Gallery">GALLERY</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#Contact">CONTACT</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- navigation html end -->
-
-  <!-- About part html start -->
-  <section class="about-container" id="About">
-    <div class="container">
-      <div class="row py-5">
-        <div class="col-md-9">
-          <h3>OMAR BIN FARUK</h3>
-
-          <p>Web Developer | Network Engineer</p>
-
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate iste iure qui dolorem doloremque ab
-            harum perspiciatis facere. Aut commodi repellendus libero vel consequatur dolorum iure repudiandae earum
-            sint nobis.</p>
-
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium aliquam adipisci expedita itaque unde
-            inventore odio voluptas magni. Minima facilis minus vel iste eaque, quas atque fugiat quibusdam nulla
-            architecto consequatur commodi sit, dicta officiis repudiandae voluptatibus nam, repellendus necessitatibus!
-          </p>
-
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam voluptate blanditiis libero nihil cupiditate.
-            Distinctio amet optio aliquid aspernatur perferendis, tempora architecto voluptate eaque quidem assumenda
-            obcaecati dolorem impedit quo nobis fuga sed deleniti fugiat. Similique, recusandae veritatis minima maxime
-            iste mollitia perspiciatis laudantium deleniti ratione iure distinctio in rem voluptate repellendus, aliquid
-            reiciendis voluptas saepe ab dolor commodi totam.</p>
-        </div>
-
-        <div class="col-md-3">
-          <img src="images/about-img.jpg" alt="OAMR" class="img-fluid border border-light rounded-circle mt-4">
+  <body>
+    <!-- banner part html start -->
+    <section class="container-fluid banner-container">
+      <div class="row vh-100">
+        <div
+          class="
+            col-md-9
+            banner-colum
+            m-auto
+            text-center text-white
+            display-4
+            p-4
+            border border-light
+          "
+        >
+          <h1 class="fw-bold">OMAR BIN FARUK</h1>
+          <h4 class="text-decoration-underline">
+            Web Developer & Network Engineer
+          </h4>
         </div>
       </div>
-    </div>
-  </section>
-  <!-- About part css end -->
-
-  <!-- Education part html start -->
-  <div class="education-container" id="Education">
-    <div class="container">
-      <div class="row">
-        <div class="col fw-bolder text-center p-5 edu-con">
-          <h2>Education</h2>
+    </section>
+    <!-- banner part html end -->
+    <!-- navigation part html start -->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-container">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#About">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Education">EDUCATION</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Project">PROJECT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Portfolio">PORTFOLIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Gallery">GALLERY</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Contact">CONTACT</a>
+            </li>
+          </ul>
         </div>
       </div>
-      <div class="row p-3">
-        <div class="col-md-2">
-          <div class="circle text-center text-light">
-            <p>Jan, 12 <br>
-            Dec, 15</p>
+    </nav>
+    <!-- navigation html end -->
+
+    <!-- About part html start -->
+    <section class="about-container" id="About">
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-md-9">
+            <h3>OMAR BIN FARUK</h3>
+
+            <p>Web Developer | Network Engineer</p>
+
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Cupiditate iste iure qui dolorem doloremque ab harum perspiciatis
+              facere. Aut commodi repellendus libero vel consequatur dolorum
+              iure repudiandae earum sint nobis.
+            </p>
+
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Laudantium aliquam adipisci expedita itaque unde inventore odio
+              voluptas magni. Minima facilis minus vel iste eaque, quas atque
+              fugiat quibusdam nulla architecto consequatur commodi sit, dicta
+              officiis repudiandae voluptatibus nam, repellendus necessitatibus!
+            </p>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam
+              voluptate blanditiis libero nihil cupiditate. Distinctio amet
+              optio aliquid aspernatur perferendis, tempora architecto voluptate
+              eaque quidem assumenda obcaecati dolorem impedit quo nobis fuga
+              sed deleniti fugiat. Similique, recusandae veritatis minima maxime
+              iste mollitia perspiciatis laudantium deleniti ratione iure
+              distinctio in rem voluptate repellendus, aliquid reiciendis
+              voluptas saepe ab dolor commodi totam.
+            </p>
+          </div>
+
+          <div class="col-md-3">
+            <img
+              src="images/about-img.jpg"
+              alt="OAMR"
+              class="img-fluid border border-light rounded-circle mt-4"
+            />
           </div>
         </div>
-        <div class="col-md-10">
-          <div class="card">
-            <div class="card-body">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. At similique libero tempore nisi optio, beatae debitis quibusdam delectus. Perferendis similique ea earum illo a dolore nihil iure accusamus doloremque odio eveniet, dicta assumenda aliquam quae eaque sunt minima itaque? Rerum quo quasi cum harum recusandae natus explicabo, ad sapiente facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      </div>
+    </section>
+    <!-- About part css end -->
+
+    <!-- Education part html start -->
+    <div class="education-container" id="Education">
+      <div class="container">
+        <div class="row">
+          <div class="col fw-bolder text-center p-5 edu-con">
+            <h2>Education</h2>
+          </div>
+        </div>
+        <div class="row p-3">
+          <div class="col-md-2">
+            <div class="circle text-center text-light">
+              <p>
+                Jan, 12 <br />
+                Dec, 15
+              </p>
+            </div>
+          </div>
+          <div class="col-md-10">
+            <div class="card">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. At
+                similique libero tempore nisi optio, beatae debitis quibusdam
+                delectus. Perferendis similique ea earum illo a dolore nihil
+                iure accusamus doloremque odio eveniet, dicta assumenda aliquam
+                quae eaque sunt minima itaque? Rerum quo quasi cum harum
+                recusandae natus explicabo, ad sapiente facilis?Lorem ipsum
+                dolor sit amet consectetur adipisicing elit.
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- education part 2nd coloum -->
+
+        <div class="row p-3">
+          <div class="col-md-2">
+            <div class="circle text-center text-light">
+              <p>
+                Jan, 12 <br />
+                Dec, 15
+              </p>
+            </div>
+          </div>
+          <div class="col-md-10">
+            <div class="card">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. At
+                similique libero tempore nisi optio, beatae debitis quibusdam
+                delectus. Perferendis similique ea earum illo a dolore nihil
+                iure accusamus doloremque odio eveniet, dicta assumenda aliquam
+                quae eaque sunt minima itaque? Rerum quo quasi cum harum
+                recusandae natus explicabo, ad sapiente facilis?Lorem ipsum
+                dolor sit amet consectetur adipisicing elit.
+              </div>
             </div>
           </div>
         </div>
       </div>
-
-      <!-- education part 2nd coloum -->
-
-      <div class="row p-3">
-        <div class="col-md-2">
-          <div class="circle text-center text-light">
-            <p>Jan, 12 <br>
-            Dec, 15</p>
-          </div>
-        </div>
-        <div class="col-md-10">
-          <div class="card">
-            <div class="card-body">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. At similique libero tempore nisi optio, beatae debitis quibusdam delectus. Perferendis similique ea earum illo a dolore nihil iure accusamus doloremque odio eveniet, dicta assumenda aliquam quae eaque sunt minima itaque? Rerum quo quasi cum harum recusandae natus explicabo, ad sapiente facilis?Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
-  <!-- Education part html end -->
+    <!-- Education part html end -->
 
-  <!-- project part html start -->
-  <div class="project-container" id="Project">
-    <div class="container">
-      <div class="row">
+    <!-- project part html start -->
+    <div class="project-container" id="Project">
+      <div class="container">
+        <div class="row">
           <div class="col fw-bolder text-center p-5 text-light">
             <h2>Projects</h2>
           </div>
-      </div>
-      <div class="row">
-        <div class="col-md-3">
-          <div class="project-img">
-            <img src="images/pic1.jpg" class="img-fluid w-100" alt="">
-          </div>
-          <div class="project-con">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, provident consectetur. <br> <span>10:25am</span></p>
-          </div>
         </div>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="project-img">
+              <img src="images/pic1.jpg" class="img-fluid w-100" alt="" />
+            </div>
+            <div class="project-con">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut,
+                provident consectetur. <br />
+                <span>10:25am</span>
+              </p>
+            </div>
+          </div>
 
-        <div class="col-md-3">
-          <div class="project-img">
-            <img src="images/pic2.jpg" class="img-fluid w-100" alt="">
+          <div class="col-md-3">
+            <div class="project-img">
+              <img src="images/pic2.jpg" class="img-fluid w-100" alt="" />
+            </div>
+            <div class="project-con">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut,
+                provident consectetur. <br />
+                <span>10:25am</span>
+              </p>
+            </div>
           </div>
-          <div class="project-con">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, provident consectetur. <br> <span>10:25am</span></p>
-          </div>
-        </div>
 
-        <div class="col-md-3">
-          <div class="project-img">
-            <img src="images/pic3.jpg" class="img-fluid w-100" alt="">
+          <div class="col-md-3">
+            <div class="project-img">
+              <img src="images/pic3.jpg" class="img-fluid w-100" alt="" />
+            </div>
+            <div class="project-con">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut,
+                provident consectetur. <br />
+                <span>10:25am</span>
+              </p>
+            </div>
           </div>
-          <div class="project-con">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, provident consectetur. <br> <span>10:25am</span></p>
-          </div>
-        </div>
 
-        <div class="col-md-3">
-          <div class="project-img">
-            <img src="images/pic4.jpg" class="img-fluid w-100" alt="">
-          </div>
-          <div class="project-con">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, provident consectetur. <br> <span>10:25am</span></p>
+          <div class="col-md-3">
+            <div class="project-img">
+              <img src="images/pic4.jpg" class="img-fluid w-100" alt="" />
+            </div>
+            <div class="project-con">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut,
+                provident consectetur. <br />
+                <span>10:25am</span>
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- project part html end -->
-  <!-- javascript link start -->
-  <script src="js/custom.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <!-- javascript link end -->
-</body>
+    <!-- project part html end -->
 
+    <!-- portfolio part html start -->
+    <div class="portfolio-container">
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-md-12 text-center edu-con">
+            <h2>Portfolio</h2>
+          </div>
+        </div>
+        <div class="row py-2">
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+              <img src="images/pic1.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+              <img src="images/pic1.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+              <img src="images/pic1.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+        </div>
+
+        <div class="row py-2">
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+              <img src="images/pic1.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+              <img src="images/pic1.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+              <img src="images/pic1.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- portfolio part html end -->
+    <!-- javascript link start -->
+    <script src="js/custom.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- javascript link end -->
+  </body>
 </html>
