Footer section complete
Footer section complete

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             </div>
           </div>
 
-          <div class="row">
+          <div class="row pb-4">
             <div class="col-md-12">
               <button type="button" class="btn button-color">Send Message</button>
             </div>
@@ -380,6 +380,45 @@
       </div>
     </div>
     <!-- contact form part html end -->
+
+    <!-- footer part html start -->
+    <section>
+      <div class="footer">
+        <div class="container">
+          <div class="row py-5 ">
+            <div class="col text-center text-white">
+              <em>"Work hard in silence, let your success be your noise"</em>
+              <br>
+              <p>Frank Ocean</p>
+            </div>
+          </div>
+ 
+        <div class="row  pb-5">
+          <div class="col text-center ">
+               <div class="circle-footer">
+                 <i class="fab fa-facebook-f"></i>
+               </div>
+               <div class="circle-footer">
+                 <i class="fab fa-youtube"></i>
+               </div>
+               <div class="circle-footer">
+                 <i class="fab fa-github"></i>
+               </div>
+          </div>
+        
+ 
+        </div>          
+  
+ 
+          <div class="row">
+            <div class="col text-center">
+              <p>&copy; All Right Reserved To MD RAKIBUL ISLAM</p>
+            </div>
+          </div>
+        </div>
+      </div>
+   </section>
+    <!-- footer part html end -->
     <!-- javascript link start -->
     <script src="js/custom.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
